# SpeakLine

./: .gitignore  CLAUDE.md  GITHUB_ISSUES_TEMPLATE.md  LICENSE  NEXT_STEPS_48H.md  README.md  SECURITY_AND_GROWTH_ANALYSIS.md  SUMMARY.md  idea.md  pyproject.toml  test_extension_features.py  test_lsp.py  test_lsp_commands.py
progress/: 2026-03-20_fix_vscode_keybinding.md  2026-03-20_vscode_lsp_extension.md  2026-03-21_LSP_extension_debugging_summary.md  2026-03-21_TESTING_GUIDE.md  2026-03-21_daemon_implementation.md  2026-03-21_extension_status.md  2026-03-21_extension_testing_lsp.md  2026-03-21_lsp_features_test.md  2026-03-21_vscode_debug.md  2026-03-21_vscode_extension_fix.md  SpeakLine-Complete-Guide.docx  WORK_COMPLETED.txt
speakline/: __init__.py  cli.py  commenter.py  daemon.py  formatter.py  parser.py  recorder.py  transcriber.py
speakline/lsp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_commenter.py  test_formatter.py  test_parser.py  test_recorder.py  test_security.py  test_transcriber.py
voicecomment/: __init__.py  cli.py  commenter.py  parser.py  recorder.py  transcriber.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
website/: index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.tsx  index.css
website/src/components/: ApiSection.tsx  Demo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Installation.tsx  Languages.tsx  Navbar.tsx
